fix: fix image in result modal size and timer z-index

--- a/src/components/Timer/index.scss
+++ b/src/components/Timer/index.scss
@@ -15,7 +15,7 @@
   border: 0.2rem solid var(--grey-light);
   border-radius: 50%;
   background-color: var(--background-primary);
-  z-index: 1000;
+  z-index: 1;
 
   @media (min-width: 768px) {
     top: 1em;
